chore: new component dress-me-show

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<section class="mx-auto w-h4">
+<section class="cal-h">
   <h4 class="lh-lg fw-light">
     Nice to meet you, I am Priscilla.<br>
     I am a
