--- a/src/app/lab-picture/lab-picture.component.html
+++ b/src/app/lab-picture/lab-picture.component.html
@@ -1,25 +1,12 @@
-<section class="d-flex flex-row bd-highlight mb-3 padding-top mx-auto w-h">
-  <div class="p-2 bd-highlight">
-    <iframe src="https://giphy.com/embed/YbK4Pgvg4x03U5NngZ"
-            class="giphy-embed"
-            width="324"
-            height="480" frameBorder="0"
-            allowFullScreen>
-    </iframe>
-    <p>
-      <a href="https://giphy.com/gifs/expression-faces-visage-YbK4Pgvg4x03U5NngZ"></a>
-    </p>
-  </div>
-  <div class="pt-5 bd-highlight ms-5 fw-light">
-    <p class="lh-lg">
-      <span class="color">
+<section class="d-flex flex-row bd-highlight mb-3 padding-top text-light">
+  <div class="pt-5 bd-highlight fw-light">
+    <p class="lh-lg fw-bold">
         My picture is in the lab...<br>Coming soon !<br>
-      </span>
     </p>
     <p class="mt-5">
       I started my journey as a business developer in fashion and cosmetic industry.<br> During this time, I developed a
       strong sense of
-      <span class="fw-normal">empathy through customer’s <br> request.</span>
+      <span class="fw-bold">empathy through customer’s <br> request.</span>
       Human behavior has always generated a certain curiosity in me.<br>
     </p>
     <p>
@@ -27,11 +14,11 @@
     </p>
     <p>
       In order to find the right balance between
-      <span class="fw-normal">creativity</span> and <span class="fw-normal">analytical part.</span><br>
+      <span class="fw-bold">creativity</span> and <span class="fw-bold">analytical part.</span><br>
     </p>
     <p>
-      I recently graduated from Ironhack Paris, making experiences that <span class="fw-normal">explore, solve</span><br>
-      and <span class="fw-normal">engage</span> with people.
+      I recently graduated from Ironhack Paris, making experiences that <span class="fw-bold">explore, solve</span><br>
+      and <span class="fw-bold">engage</span> with people.
     </p>
   </div>
 </section>
