--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,23 @@
-<app-care-u></app-care-u>
+<section class="mx-auto img-back flex">
+  <section class="font-monospace me-5 text-light">
+    <a href="#">
+      <img src="assets/public/eva.png">
+    </a>
+    <h5 class="text-decoration-underline mt-3">CareU</h5>
+    <p class="fw-lighter">
+      Deal with emotional distress<br>
+      2022
+    </p>
+  </section>
+  <section class="font-monospace ms-5 text-light">
+    <a href="#">
+      <img href="#" src="assets/public/mary.png">
+    </a>
+    <h5 class="text-decoration-underline mt-3">Dress me slow'ly (work in progress) </h5>
+    <p class="fw-lighter">
+      Measure its environmental impact<br>
+      2022
+    </p>
+  </section>
+
+</section>
