--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,9 @@ body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
 }
+.mat-tab-label, .mat-tab-link {
+  color: #212529;
+}
+.mat-tab-group{
+  font-family: 'Raleway', sans-serif;
+}
