--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section class="mx-auto w-h4 fw-light text-center bg-color">
-  <div class="my-3">
+  <div class="py-3">
     <h3 class="text-start">Want to get in touch ?</h3>
-    <div class="pt-4">
+    <div class="pt-4 f-size">
       <a href="mailto:PRISCILLALEROUX.SERVAN@GMAIL.COM">PRISCILLALEROUX.SERVAN@GMAIL.COM</a>
     </div>
     <div class="pt-4">
