--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
-<mat-tab-group mat-align-tabs="end" animationDuration="2000ms" style="height: 84%">
+<mat-tab-group mat-align-tabs="end" animationDuration="2000ms">
   <mat-tab label="About Me">
-    <app-about-me></app-about-me>
-    <app-lab-picture></app-lab-picture>
+    <section class="height-section">
+      <app-about-me></app-about-me>
+      <div class="cal-h img">
+        <app-lab-picture></app-lab-picture>
+      </div>
+    </section>
   </mat-tab>
   <mat-tab label="Projects">
     <app-projects></app-projects>
@@ -10,7 +14,6 @@
     <app-resume></app-resume>
   </mat-tab>
 </mat-tab-group>
-<div class="bg-color">
-  <app-footer></app-footer>
-</div>
+<app-footer></app-footer>
+
 
