chore: first section html care-u

--- a/src/app/care-u/care-u.component.html
+++ b/src/app/care-u/care-u.component.html
@@ -1,1 +1,17 @@
+<section>
+  <h1>Create an whole application for the</h1>
+  <h1>Global Wellness Institut</h1>
+  <ul>
+    <li>Time : 2 weeks</li>
+    <li>Team : 2 persons</li>
+    <li>Context : Ironhack Paris</li>
+  </ul>
+  <h3>Brief</h3>
+  <p>When we talk about wellness applications, the words that come to mind are meditation, fitness, and personal development. And that’s pretty much how the market is segmented. We can dissociate 3 main categories :
+  </p>
+  <p>health - yoga, fitness, beauty </p>
+  <p>psycological balance - meditation, spiritual retreat</p>
+  <p>social wellness</p>
+</section>
+
 
