--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,23 +1,23 @@
 <section class="mx-auto img-back flex">
   <section class="font-monospace me-5 text-light">
-    <a href="#">
+    <a href="care-u">
       <img src="assets/public/eva.png">
-    </a>
     <h5 class="text-decoration-underline mt-3">CareU</h5>
     <p class="fw-lighter">
       Deal with emotional distress<br>
       2022
     </p>
+  </a>
   </section>
   <section class="font-monospace ms-5 text-light">
-    <a href="#">
-      <img href="#" src="assets/public/mary.png">
-    </a>
+    <a href="dress-me-slow">
+      <img src="assets/public/mary.png">
     <h5 class="text-decoration-underline mt-3">Dress me slow'ly (work in progress) </h5>
     <p class="fw-lighter">
       Measure its environmental impact<br>
       2022
     </p>
+  </a>
   </section>
 
 </section>
