feat: footer in care-U

--- a/src/app/care-u/care-u.component.html
+++ b/src/app/care-u/care-u.component.html
@@ -13,5 +13,5 @@
   <p>psycological balance - meditation, spiritual retreat</p>
   <p>social wellness</p>
 </section>
-
+<app-footer></app-footer>
 
